sort.basic.insertion.AlgInsertionSort.scala.error
Erreur de compilation :
AlgInsertionSort:11: error: ')' expected but '}' found.
    }
    ^AlgInsertionSort:12: error: Unmatched closing brace '}' ignored here
  }}} 
   ^